# fw-mobile

./: .gitignore  GENERATE_HEADERS.sh  README.md  bas_apk  build_android  build_android.bat  build_android.sh  build_as_apk  build_ios  build_ios.sh  build_ios_app_by_unity.sh  build_unity.bat  build_unity_android  build_unity_android.bat  build_unity_android.sh  build_unity_ios  build_unity_ipa  build_xc_ios.sh  build_xcode_ipa  buildm_android.sh  buildw_android.bat  bunity_apk  bunity_ipa  bxcode_ipa  export_unity_pkg  export_unity_pkg.bat  generate_headers  generate_headers.bat  generate_headers.sh  genw_headers.bat  lib_build_android.bat  lib_build_android.sh  lib_build_ios.sh  lib_build_osx.sh  lib_build_windows.bat  lib_buildm_android.sh  lib_buildm_ios_lib.sh  lib_copy_res.bat  make_as_aar  make_ios_lib_by_xcode.sh  (+15 more)
EDITOR_CPP/: demo.cpp  demo.mm  main.cpp  mainctrl.cpp
EDITOR_CPP/base/: base.h  entry.cpp  entry.h  filesystem.cpp  filesystem.h  filesystem_osx.mm  logging.cpp  logging.h  types.cpp  types.h  utf8.cpp  utf8.h
EDITOR_CPP/bridge/: CLSDEF.cpp  CLSDEF.hh  CLSDEFLANG.cpp  CLSDEFLANG.hh  clspicker.cpp  clspicker.hh  cppform.hh  cppgen.cpp  cppgen.hh  gencpp.cpp  gencpp.hh  langcoder.cpp  langcoder.hh  main.cpp  metapicker.cpp  metapicker.hh  objcform.hh  objcgen.cpp  objcgen.hh  typestring.cpp  typestring.hh
EDITOR_CS/: Program.cs
EDITOR_CS_OSX/: EDITOR_CS.csproj  EDITOR_CS.sln
app_android/: CLEAN  CLEAN.bat  CLEAN.sh  settings.gradle
app_android/app/: CMakeLists.txt  build.gradle
app_android/app/keystore/: README.md
app_android/app/keystores/: README.md
app_android/app/src/main/: AndroidManifest.xml
app_android/app/src/main/aidl/src/app/components/services/: ITaskService.aidl  ITaskServiceAdapter.aidl  IWorkClientPort.aidl  IWorkServicePort.aidl
app_android/app/src/main/cpp/: native.cpp
app_android/app/src/main/java/src/app/application/: App.java  CQAppDelegate.java  CQCrashListener.java  CQSingletonManager.java  MainAppDelegate.java  ServiceAppDelegate.java
app_android/app/src/main/java/src/app/application/cq/: AppDelegate.java  CrashListener.java
app_android/app/src/main/java/src/app/boot/: AppDelegate.java  AppWrapper.java  CrashListener.java
app_android/app/src/main/java/src/app/bootstrap/: App.java  MainAppDelegate.java  MainAppWrapper.java  ServiceAppDelegate.java  TaskAppWrapper.java
app_android/app/src/main/java/src/app/com/: ActivityDispatcher.java  ActivityHelper.java  CommandHelper.java  DemoActivity.java  PermissionHelper.java  PermissionRequestActivity.java  ServiceHelper.java
app_android/app/src/main/java/src/app/components/: CQDemoActivity.java
app_android/app/src/main/java/src/app/components/activities/blank/: BlankActivity.java
app_android/app/src/main/java/src/app/components/activities/daily/: BlankFragment.java  CommandFragment.java  DailyActivity.java  DailyDemoActivity.java  DrawerFragment.java
app_android/app/src/main/java/src/app/components/activities/doc/: AttachFragment.java  ContentFragment.java  DocActivity.java  TitleBarFragment.java  ToolBarFragment.java
app_android/app/src/main/java/src/app/components/activities/document/: DocumentActivity.java
app_android/app/src/main/java/src/app/components/activities/example/: ExampleActivity.java
app_android/app/src/main/java/src/app/components/activities/floating/: FloatingActivity.java
app_android/app/src/main/java/src/app/components/activities/list/: ListActivity.java  ListBaseActivity.java
app_android/app/src/main/java/src/app/components/blank/: BlankActivity.java
app_android/app/src/main/java/src/app/components/cq/: DemoActivity.java
app_android/app/src/main/java/src/app/components/example/: ExampleActivity.java
app_android/app/src/main/java/src/app/components/floating/: FloatingActivity.java
app_android/app/src/main/java/src/app/components/launch/: LaunchActivity.java
app_android/app/src/main/java/src/app/components/services/: TaskService.java  TaskServiceAdapter.java  WorkClient.java  WorkService.java
app_android/app/src/main/java/src/app/data/: CQActivityDispatcher.java  CQAppInfo.java  CQBus.java  CQHotfixManager.java  Native.java
app_android/app/src/main/java/src/app/data/cq/: ActivityDispatcher.java  AppInfo.java  Bus.java  HotfixManager.java  NetStatusListener.java  TaskDispatcher.java
app_android/app/src/main/java/src/app/data/user/: UserIdentity.java  UserSetting.java
app_android/app/src/main/java/src/app/mod/: ActivityDispatcher.java  ActivityHelper.java  AndroidVersion.java  AppInfo.java  BroadcastAssist.java  HotfixHelper.java  HotfixManager.java  JniAssist.java  NetStatusHelper.java  NetStatusListener.java  ServiceAssist.java  TaskDispatcher.java  TaskHelper.java  TimerAssist.java
app_android/app/src/main/java/src/app/model/jni/: Native.java
app_android/app/src/main/java/src/app/model/system/: SystemSettings.java
app_android/app/src/main/java/src/app/model/user/: UserIdentity.java  UserSetting.java
app_android/app/src/main/java/src/app/utility/application/: AppDelegate.java  CrashListener.java  EventCenter.java  L.java  SingletonManager.java
app_android/app/src/main/java/src/app/utility/components/: DemoActivity.java
app_android/app/src/main/java/src/app/utility/data/: ActivityDispatcher.java  AppInfo.java  Bus.java
app_android/app/src/main/res/layout/: activity_example.xml  activity_launch.xml  activity_list.xml  daily_activity.xml  daily_cmd_fragment.xml  daily_command_fragment.xml  daily_drawer_fragment.xml  doc_activity_land.xml  doc_activity_port.xml  doc_attach_fragment.xml  doc_content_fragment.xml  doc_title_bar_fragment.xml  floating_activity.xml
app_android/app/src/main/res/values/: strings.xml  styles.xml
app_android/app/src/main/res/values-zh-rCN/: strings.xml
app_android/app/src/master/res/values/: strings.xml
cusapp_lua/: genm_lua.sh
library_android/: CMakeLists.txt  build.gradle
library_android/src/main/: AndroidManifest.xml
program_cpp/: _CQCOCOA_VERSION.h  _CQUIKIT_VERSION.h
program_game/: generate_lua  generate_lua.bat
subsystem_lua/: generate_lua.sh
(+1000 files in other folders)
